compiler/tools/fpp-check/test/state_machine/typed_elements/state_transition_bad_guard_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/state_transition_bad_guard_type.fpp:6.13
    on s if g enter S
            ^
error: type mismatch at state transition
type of state transition is None
type of guard is U32
